# MagicPlay

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.yaml.example  pyproject.toml  setup.cfg
.claude/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/superpowers/plans/: 2026-03-22-timeline-analyzer.md
scripts/: run.py  run_comic.py
src/magicplay/: app.py  di_container.py  exceptions.py  logging_config.py  utils.py
src/magicplay/analyzer/: __init__.py  physics_checker.py  script_analyzer.py  timeline_analyzer.py
src/magicplay/config/: __init__.py  settings.py
src/magicplay/consistency/: __init__.py  story_consistency.py
src/magicplay/core/: comic_orchestrator.py  optimized_orchestrator.py  orchestrator.py
src/magicplay/evaluator/: __init__.py  base.py  image_evaluator.py
src/magicplay/experiment/: __init__.py  tracker.py
src/magicplay/generators/: __init__.py  base.py  character_gen.py  comic_panel_gen.py  context.py  dynamic_panel_selector.py  first_frame_generator.py  music_generator.py  scene_concept_gen.py  scene_reference_gen.py  scene_segment_gen.py  script_analysis_generator.py  script_gen.py  storyboard_generator.py  subtitle_generator.py  synthesis_generator.py  video_gen.py
src/magicplay/ports/: __init__.py  generators.py  repositories.py  services.py
src/magicplay/prompts/: comic_panel.md  dynamic_panel_selector.md  gen_episode.md  gen_scene.md  gen_story.md  script_analysis.md  storyboard_design.md  timeline_analyze.md
src/magicplay/resource_registry/: __init__.py  registry.py
src/magicplay/scene_generate/: content.py  video.py
src/magicplay/schema/: professional_workflow.py
src/magicplay/services/: __init__.py  base.py  image_api.py  jimeng_video_api.py  (+2 more)
test/: __init__.py  conftest.py  mocks.py  test_analyzer_adjustment.py  test_cache.py  test_comic_integration.py  test_comic_orchestrator.py  test_comic_panel_gen.py  test_duration_analysis.py  test_dynamic_panel_selector.py  test_evaluator.py  test_experiment_tracker.py  test_image_service.py  test_integration.py  test_jimeng_video_service.py  test_llm_service.py  test_media_utils.py  test_optimization_architecture.py  test_orchestrator.py  test_physics_checker.py  test_resource_registry.py  test_scene_concept_generator.py  test_scene_segment_generator.py  test_script_analyzer.py  test_script_generator.py  test_story_consistency.py  test_timeline_analyzer.py  test_validators.py  test_video_api.py  test_video_generator.py
(+9 files in other folders)
