[project]
name = "magicplay"
version = "0.1.0"
description = "AI-powered automated short play script and video generation tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.12",
    "dotenv>=0.9.9",
    "moviepy>=2.2.1",
    "openai>=2.21.0",
    "tenacity>=8.2.2",
    "pillow>=10.0.0",      # For image quality evaluation
    "numpy>=1.24.0",       # For numerical computations
    "scipy>=1.13.0",       # For signal processing and filters
    "pydantic>=2.0.0",     # Data validation
    "pydantic-settings>=2.0.0",  # Settings management
    "dependency-injector>=4.41.0",  # Dependency injection
    "loguru>=0.7.0",
    "volcengine>=1.0.218",
    "pyyaml>=6.0",        # For config.yaml support
    "streamlit>=1.55.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.28.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "black>=25.1.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.13.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
    "pre-commit>=3.6.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = [".git", "__pycache__", ".venv", "dist", "build"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
